--- a/html/templates/navbar.html
+++ b/html/templates/navbar.html
@@ -1,12 +1,12 @@
 <!-- Description: This is the navbar for the website. It is included in all pages. -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../index.html"><img src="../resources/logo.png" alt="TechCare Solutions logo"
-                                                      width="73"
-                                                      height="30"></a>
+    <a class="navbar-brand" href="../../index.html"><img src="../../resources/logo.png" alt="TechCare Solutions logo"
+                                                         width="73"
+                                                         height="30"></a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a id="navbarHome" class="nav-link" href="../index.html">Home</a>
+                <a id="navbarHome" class="nav-link" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a id="navbarAbout" class="nav-link" href="#">About</a>
@@ -20,7 +20,7 @@
                     <a class="dropdown-item" href="#">Project</a>
                     <a class="dropdown-item" href="#">Project2</a>
                     <div class="dropdown-divider"></div>
-                    <a id="navbarOtherProjects" class="dropdown-item" href="portfolio.html">Other projects</a>
+                    <a id="navbarOtherProjects" class="dropdown-item" href="../portfolio.html">Other projects</a>
                 </div>
             </li>
             <li class="nav-item">
