--- a/html/templates/navbar.html
+++ b/html/templates/navbar.html
@@ -1,6 +1,6 @@
 <!-- Description: This is the navbar for the website. It is included in all pages. -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../../index.html"><img src="../../resources/logo.png" alt="TechCare Solutions logo"
+    <a class="navbar-brand" href="../../index.html"><img src="/resources/logo.png" alt="TechCare Solutions logo"
                                                          width="73"
                                                          height="30"></a>
     <div class="collapse navbar-collapse">
@@ -9,10 +9,10 @@
                 <a id="navbarHome" class="nav-link" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a id="navbarAbout" class="nav-link" href="#">About</a>
+                <a id="navbarAbout" class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item dropdown">
-                <a id="portfolioDropdown" class="nav-link dropdown-toggle" href="#" role="button"
+                <a id="portfolioDropdown" class="nav-link dropdown-toggle" href="portfolio.html" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Portfolio
                 </a>
@@ -20,14 +20,14 @@
                     <a class="dropdown-item" href="#">Project</a>
                     <a class="dropdown-item" href="#">Project2</a>
                     <div class="dropdown-divider"></div>
-                    <a id="navbarOtherProjects" class="dropdown-item" href="../portfolio.html">Other projects</a>
+                    <a id="navbarOtherProjects" class="dropdown-item" href="portfolio.html">Other projects</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a id="navbarPricing" class="nav-link" href="#">Pricing</a>
+                <a id="navbarPricing" class="nav-link" href="pricing.html">Pricing</a>
             </li>
             <li class="nav-item">
-                <a id="navbarContact" class="nav-link" href="#">Contact</a>
+                <a id="navbarContact" class="nav-link" href="contact.html">Contact</a>
             </li>
         </ul>
     </div>
