changed prices to services

--- a/html/templates/navbar.html
+++ b/html/templates/navbar.html
@@ -24,7 +24,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a id="navbarPricing" class="nav-link" href="pricing.html">Pricing</a>
+                <a id="navbarServices" class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
                 <a id="navbarContact" class="nav-link" href="contact.html">Contact</a>
