--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
 .card:hover {
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+}
+
+.cardLink, .cardLink:hover {
+    text-decoration: none;
 }
