fixed footer, now fixed to bottem using flexbox

--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,13 @@
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
+}
+
 .card:hover {
     transform: scale(1.05);
     box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
@@ -6,3 +16,4 @@
 .cardLink, .cardLink:hover {
     text-decoration: none;
 }
+
