--- a/html/templates/footer.html
+++ b/html/templates/footer.html
@@ -1,3 +1,3 @@
-<div class="text-center fixed-bottom p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     <span class="text-muted">© 2023 TechCare Solutions. All rights reserved.</span>
 </div>
