update the new index, looks more like the wireframe

--- a/html/templates/navbar.html
+++ b/html/templates/navbar.html
@@ -1,5 +1,6 @@
 <!-- Description: This is the navbar for the website. It is included in all pages. -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <h2 class="d-none">Navbar</h2>
     <a class="navbar-brand" href="../../index.html"><img src="/resources/logo.png" alt="TechCare Solutions logo"
                                                          width="73"
                                                          height="30"></a>
