--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,20 @@
     background: lightgrey;
     height: 500px;
 }
+
+.cards{
+    margin-top: -10rem;
+}
+
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    align-self: center;
+}
+
+.row {
+    justify-content: space-evenly;
+}
